# base-mlx

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  base.md
crates/base-mlx-cli/: Cargo.toml
crates/base-mlx-cli/src/: main.rs
crates/base-mlx-core/: Cargo.toml
crates/base-mlx-core/src/: chat_template.rs  engine.rs  error.rs  lib.rs  memory.rs  mlx_ext.rs  model.rs  pull.rs  registry.rs  sampler.rs  session.rs  speculative.rs  tokenizer.rs
crates/base-mlx-core/src/model/: config.rs  gemma.rs  granite.rs  kernels.rs  qwen3.rs
crates/base-mlx-server/: Cargo.toml
crates/base-mlx-server/src/: app.rs  lib.rs  openai.rs  state.rs
