[package]
name = "base-mlx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "base-mlx CLI + daemon entry point."

[[bin]]
name = "base-mlx"
path = "src/main.rs"

[dependencies]
base-mlx-core.workspace = true
base-mlx-server.workspace = true
safetensors.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
