[package]
name = "base-mlx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine: MLX-backed transformer inference (forward passes, KV cache, sampling, tokenization, weight loading)."

[dependencies]
mlx-rs.workspace = true
# Direct access to memory.h functions that mlx-rs hasn't bound yet.
mlx-sys = "0.2"
safetensors.workspace = true
tokenizers.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
indexmap.workspace = true
rand.workspace = true
dirs.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
hf-hub.workspace = true
uuid.workspace = true
