[package]
name = "base-mlx-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible HTTP server + MCP gateway."

[dependencies]
base-mlx-core.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
